--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: rgb(127, 255, 223);
+  background-color: rgb(180, 202, 236);
 }
 
 body {
   font-family: Arial, sans-serif;
-  background-color: rgb(127, 255, 223);
+  background-color: rgb(180, 202, 236);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,7 +16,7 @@ body {
 
 .container {
   text-align: center;
-  background-color: rgb(127, 255, 223);
+  background-color: rgb(180, 202, 236);
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -47,7 +47,9 @@ input[type="file"] {
   height: 75px;
 }
 
-#predictButton {
+#switchToWebcam,
+#switchToFile,
+#takePictureButton {
   background-color: rgb(0, 0, 0);
   color: #ffffff;
   border: none;
@@ -59,6 +61,18 @@ input[type="file"] {
   border: 4px solid #2f8be1;
 }
 
+#predictButton {
+  background-color: rgb(0, 0, 0);
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-top: 20px;
+  border: 4px solid #2bc067;
+}
+
 #clearSelectorButton {
   background-color: rgb(0, 0, 0);
   color: #ffffff;
@@ -68,23 +82,34 @@ input[type="file"] {
   border-radius: 5px;
   font-size: 16px;
   margin-top: 20px;
-  border: 4px solid #e12f2f;
+  border: 4px solid #e12f35;
 }
 
 
-  
-
-#predictButton:hover {
+#switchToWebcam:hover,
+#switchToFile:hover,
+#takePictureButton:hover {
   background-color: rgb(255, 255, 255);
   color: #2f8be1;
 }
 
-#clearSelectorButton:hover {
+#predictButton:hover {
   background-color: rgb(255, 255, 255);
-  color: #e12f2f;
+  color: #2bc067;
 }
 
+#clearSelectorButton:hover {
+  background-color: rgb(255, 255, 255);
+  color: #e12f35;
+}
 
+#switchToFile {
+  display: none; /* Initially hidden, will be shown when switching back from webcam */
+}
+
+#takePictureButton {
+  display: none; /* Initially hidden, will be shown when switching to webcam */
+}
 
 #result {
   margin-top: 20px;
@@ -97,4 +122,18 @@ input[type="file"] {
 #prediction {
   font-size: 18px;
   color: #555;
+}
+
+/* Styling for the webcam container */
+#webcamContainer {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+video {
+  width: 100%;
+  max-width: 400px;
+  border: 4px solid #389aea;
+  border-radius: 10px;
 }
